--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,30 +3,27 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app id="WebApp_1526901100223">
+	<filter>
+		<filter-name>EncodingFilter</filter-name>
+		<filter-class>Filter.EncodingFilter</filter-class>
+	</filter>
+	<filter>
+		<filter-name>ValidateFilter</filter-name>
+		<filter-class>Filter.ValidateFilter</filter-class>
+	</filter>
+	<filter-mapping>
+		<filter-name>EncodingFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
+		<filter-name>ValidateFilter</filter-name>
+		<url-pattern>/correct.jsp</url-pattern>
+	</filter-mapping>
 	<servlet>
 		<servlet-name>CreateFolder</servlet-name>
 		<servlet-class>Servlet.CreateFolder</servlet-class>
 		<load-on-startup>0</load-on-startup>
 	</servlet>
-
-	<filter>
-		<filter-name>EncodingFilter</filter-name>
-		<filter-class>Filter.EncodingFilter</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>EncodingFilter</filter-name>
-		<url-pattern>/*</url-pattern>
-	</filter-mapping>
-	<filter>
-		<filter-name>ValidateFilter</filter-name>
-		<filter-class>Filter.ValidateFilter</filter-class>
-	</filter>
-
-	<filter-mapping>
-		<filter-name>ValidateFilter</filter-name>
-		<url-pattern>/correct.jsp</url-pattern>
-	</filter-mapping>
 	<servlet>
 		<servlet-name>UploadServlet</servlet-name>
 		<servlet-class>Servlet.UploadServlet</servlet-class>
@@ -55,6 +52,11 @@
     <servlet-name>SaveCorrect</servlet-name>
     <servlet-class>Servlet.SaveCorrect</servlet-class>
   </servlet>
+  <servlet>
+    <servlet-name>Magic</servlet-name>
+    <servlet-class>Servlet.Magic</servlet-class>
+  </servlet>
+
 
 
   
@@ -89,6 +91,10 @@
   <servlet-mapping>
     <servlet-name>SaveCorrect</servlet-name>
     <url-pattern>/SaveCorrect</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>Magic</servlet-name>
+    <url-pattern>/Magic</url-pattern>
   </servlet-mapping>
   
 </web-app>
